--- a/style.scss
+++ b/style.scss
@@ -1,11 +1,12 @@
 $toolboxWidth: 40rem;
 
 @import "partials/setup";
-@import "partials/aside";
+@import "partials/aside.scss";
 
 @import "partials/imagepos";
 
 body{
+	position: relative;
 	font-family: 'Montserrat', sans-serif;
 	background-color:rgba(0,4,23,1);
 }
@@ -88,7 +89,7 @@ header .logoWrapper {
 }
 .toolboxButton{
 	align-self:flex-end;
-		padding:1.5rem;
+	padding:1.5rem;
 	background:red;
 
 }
@@ -151,7 +152,8 @@ nav ul li{
 
 article{
 	display:none;
-	margin-top:3rem;
+	padding-top:1.5rem;
+	margin-top:1.5rem;
 	// padding-top:2rem;
 	
 }
@@ -208,9 +210,9 @@ article{
 	background:rgba(0,0,0,0.6);
 }
 .image-thing{
-		flex-basis:40%;
-		height:0;
-		padding-top:40%;
+	flex-basis:40%;
+	height:0;
+	padding-top:40%;
 	border:2px solid white;
 	float:left;
 	margin-right:2rem;
@@ -220,7 +222,6 @@ article{
 	background-color: white;
 	background-position: center center;
 	background-repeat: no-repeat;
-	// flex-shrink:0;
 }
 .text-block{
 	flex-basis:60%;
@@ -241,31 +242,33 @@ article{
 .toolboxClose{
 	opacity:0;
 	transform:scaleY(0);
-
+	height:0;
 }
 .toolboxButton{
-	border:none;
-	border-bottom:4px solid red;
-	background:white;
-	color:red;
-	font-weight: 700;
-	height:100%;
-	text-transform: uppercase;
-	&:hover{
-		background:red;
-		border-color:white;
+		background:linear-gradient(#FFDD7A,#FFC200, #CD6F1D);
+		border:none;
 		padding:1.5rem;
-		color:white;
+		font-weight:900;
+		font-size:2rem;
+		margin: 2rem auto 0 auto;
+		color:black;
+		box-shadow: 0px 4px 8px rgba(0,0,0,0.5);
+		&:hover{
+			background:linear-gradient(#FEEBB7,#FFDF7F, #DF8E1F);
+		}
 	}
-}
-
 footer {
 	text-align: center;
-	// padding-top: 5%;
 }
-
+footer p{
+	margin-top:4rem;
+}
 footer a:hover, footer p span {
 	color: red;
+}
+
+#twitter-widget-0{
+	margin-top:1rem;
 }
 //
 @import "partials/mq";
